# XTLua

./: ..gitignore.kate-swp  .gitignore  .gitmodules  Makefile  README.md  make.sh  xlua.sln  xlua.vcxproj
Debug/32/: xlua.exp  xlua.lib
Debug/32/xlua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.delete.1.tlog  xlua.lastbuildstate
LuaJIT-2.0.5/: make.sh
LuaJIT-2.0.5/src/: Makefile  buildvm.exp  buildvm.lib  lua51.exp  luajit  luajit.exp  luajit.lib  minilua.exp  minilua.lib
LuaJIT-2.0.5/src/host/: buildvm  minilua
LuaSDK/lib/: lua51.lib
Release/32/: xlua.exp
Release/32/xlua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.delete.1.tlog  xlua.lastbuildstate
Release/64/: xlua.exp  xlua.lib
Release/64/xlua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  xlua.lastbuildstate  xlua.write.1u.tlog
Release/plugins/xlua/64/: win.xpl
XTLua/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lin.xpl  make.sh  xtlua.sln  xtlua.vcxproj
XTLua/Debug/64/: xlua.exp
XTLua/Debug/64/xtlua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  xtlua.lastbuildstate  xtlua.write.1u.tlog
XTLua/Debug/plugins/xtlua/64/: win.xpl
XTLua/Release/64/: xlua.exp
XTLua/Release/64/xtlua.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  xtlua.lastbuildstate  xtlua.write.1u.tlog
XTLua/Release/plugins/xtlua/64/: win.xpl
XTLua/include/: xpdatarefs.h  xpmtdatarefs.h  xpmtdatatypes.h
XTLua/src/: SerialWidget.cpp  SerialWidget.h  imgui4xp.cpp  imgui4xp.h  imgui_starter_window.cpp  imgui_starter_window.h  lin.xpl  lua_helpers.cpp  module.cpp  module.h  xlua.cpp  xluaplugin.cpp  xluaplugin.h  xpcommands.cpp  xpcommands.h  xpdatarefs.cpp  xpdatarefs.h  xpfuncs.cpp  xpfuncs.h  xpmtdatarefs.cpp  xpmtdatarefs.h  xpmtdatatypes.h  xptimers.cpp  xptimers.h
XTLua/src/ImgWindow/: ImgFreeTypeFontAtlas.cpp  ImgWindow.cpp
XTLua/src/imgui/: imconfig.h  imgui_draw.cpp
XTLua/src/json/: json.hpp
deploy/xlua/64/: lin.xpl
deploy/xlua/scripts/create_drefs/: create_drefs.lua
deploy/xtlua/: init.lua
deploy/xtlua/64/: lin.xpl  mac.xpl  win.xpl
deploy/xtlua/init/scripts/testnotifier/: testnotifier.lua
deploy/xtlua/scripts/tests/: tests.lua
lua_sdk/: lua51.lib.new
src/: module.cpp  module.h  xlua.cpp  xpdatarefs.cpp  xpdatarefs.h  xpfuncs.cpp  xpmtdatarefs.cpp  xpmtdatarefs.h  xpmtdatatypes.h  xptimers.cpp
xlua.xcodeproj/: project.pbxproj
xlua.xcodeproj/project.xcworkspace/xcuserdata/msparks.xcuserdatad/: UserInterfaceState.xcuserstate
xlua.xcodeproj/project.xcworkspace/xcuserdata/zemsolutions.xcuserdatad/: UserInterfaceState.xcuserstate
xlua.xcodeproj/xcshareddata/xcschemes/: xtlua.xcscheme
xlua.xcodeproj/xcuserdata/msparks.xcuserdatad/xcschemes/: xcschememanagement.plist
xlua.xcodeproj/xcuserdata/zemsolutions.xcuserdatad/xcschemes/: xcschememanagement.plist
